@@ -190,6 +190,7 @@ stephan
 Stephen Chin
 Steve Cohen
 Steve Loughran
+Steve Morin
 Steven E. Newton
 Takashi Okamoto
 Thomas Butz
